# translitRS

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: charmaps.rs  lib.rs  main.rs  process.rs  processor.rs  transliterate.rs
src/process/: pandoc.rs  plaintext.rs
src/transliterate/: charmaps.rs
