[package]
name = "translitrs"
version = "0.2.2"
edition = "2021"
authors = ["Filip Parag <filip@parag.rs>"]
license = "MIT"
description = "Transliteration utility for Serbian language"
readme = "README.md"
repository = "https://github.com/filiparag/translitRS"
keywords = ["transliteration", "filter", "text", "pandoc"]
categories = ["command-line-utilities", "text-processing"]
include = ["/src"]
maintenance = { status = "passively-maintained" }
rust-version = "1.57"

[lib]
name = "translitrs"
path = "src/lib.rs"

[features]
default = []
pandoc = ["dep:pandoc_ast"]

[dependencies]
subslice = "0.2"
regex = "1.7"
lazy_static = "1.4"
pandoc_ast = { version = "0.8", optional = true }
